revise namings, test repo, usecase
