# internal/user/delivery/http/dto/find_user.go
@@ -2,7 +2,7 @@ package dto
 
 import "github.com/dinorain/useraja/pkg/utils"
 
-type FindUserResponseDto struct {
+type UserFindResponseDto struct {
 	Meta utils.PaginationMetaDto `json:"meta"`
 	Data interface{}             `json:"data"`
 }
