# internal/user/delivery/http/dto/user_login.go
@@ -4,12 +4,12 @@ import (
 	"github.com/google/uuid"
 )
 
-type LoginRequestDto struct {
+type UserLoginRequestDto struct {
 	Email    string `json:"email" validate:"required,lte=60,email"`
 	Password string `json:"password" validate:"required"`
 }
 
-type LoginResponseDto struct {
-	UserID uuid.UUID                `json:"user_id" validate:"required"`
-	Tokens *RefreshTokenResponseDto `json:"tokens" validate:"required"`
+type UserLoginResponseDto struct {
+	UserID uuid.UUID                    `json:"user_id" validate:"required"`
+	Tokens *UserRefreshTokenResponseDto `json:"tokens" validate:"required"`
 }
